<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>lt.lb.commons</groupId>
    <artifactId>Commons</artifactId>
    <version>local-jar</version>
    <packaging>pom</packaging>
    <properties>
        <project.production.version>local-jar</project.production.version>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        
    </properties>
    <name>CommonsLB</name>
    <modules>
        <module>commonslb-core</module>
        <module>commonslb-log</module>
        <module>commonslb-refmodel</module>
        <module>commonslb-javafx</module>
        <module>commonslb-threads</module>
        <module>commonslb-io</module>
        <module>commonslb-jobs</module>
        <module>commonslb-graphtheory</module>
        <module>commonslb-jpa</module>
        <module>commonslb-reflection</module>
        <module>commonslb-email</module>
        <module>commonslb-tests</module>
    </modules>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-core</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-io</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-threads</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-jpa</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-refmodel</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-javafx</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-reflection</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-email</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-tests</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-log</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            
            
            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>javax.persistence-api</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>
